[gd_scene load_steps=10 format=3 uid="uid://cl6dnggohbeip"]

[ext_resource type="Script" path="res://interface/menus/game/inventory/user_inventory.gd" id="1_2wni4"]
[ext_resource type="Script" path="res://interface/inventory/control/inventory_control_grid.gd" id="2_4chrr"]
[ext_resource type="Texture2D" uid="uid://c5tps135rr4f1" path="res://icon.svg" id="3_vmsph"]
[ext_resource type="Texture2D" uid="uid://cygh8k6shbbdd" path="res://interface/inventory/field_background.png" id="4_v30jh"]
[ext_resource type="Texture2D" uid="uid://s2ydmhh3shft" path="res://interface/inventory/field_highlighted_background.png" id="5_eqd1l"]
[ext_resource type="PackedScene" uid="uid://1hh7cg8kpack" path="res://interface/menus/game/inventory/user_equipment_bar.tscn" id="6_dcj36"]

[sub_resource type="StyleBoxTexture" id="1"]
texture = ExtResource("4_v30jh")
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="2"]
texture = ExtResource("5_eqd1l")
region_rect = Rect2(0, 0, 32, 32)

[sub_resource type="StyleBoxFlat" id="5"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.92549, 0.152941, 1)

[node name="UserInventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2wni4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 601.0
offset_bottom = 345.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="InventoryGridPlayerControl" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(240, 240)
layout_mode = 2
script = ExtResource("2_4chrr")
field_dimensions = Vector2(24, 24)
draw_selections = true
selection_color = Color(0.745098, 0.745098, 0.745098, 1)
default_item_texture = ExtResource("3_vmsph")
field_style = SubResource("1")
field_highlighted_style = SubResource("2")
selection_style = SubResource("5")

[node name="SortPlayerButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Sort"

[node name="SplitPlayerButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Split"

[node name="UserEquipmentBar" parent="VBoxContainer/HBoxContainer" node_paths=PackedStringArray("inventory_player_grid") instance=ExtResource("6_dcj36")]
unique_name_in_owner = true
layout_mode = 2
inventory_player_grid = NodePath("../VBoxContainer/PanelContainer/InventoryGridPlayerControl")

[node name="InfoLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0

[connection signal="hidden" from="." to="." method="_on_hidden"]
